# KAVI-voice-Assitant

./: .replit  Code_of_Conduct.md  Contribution.md  Document 16.docx  README.md  TakeABreak.py  clone.md  code  code.py  copy_code.py  main.py  modules.py  pyproject.toml  requirements.txt  setting up stuffs.md  source code.py
.github/: workflow repocodeql-analysis.yml
.github/ISSUE_TEMPLATE/: issue-form.yml
